# semgrep-rs-example

./: .gitignore  .gitmodules  Cargo.toml
src/: main.rs
